--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loading-icons": "^1.0.6",
     "react-multi-carousel": "^2.6.5",
+    "react-responsive-modal": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
